# e2eplm

./: .gitignore  LICENSE  PLAN.md  README.md  VIDEO-SCRIPT.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/prompts/: github-adk-Discussions.md  github-adk-Open or closed issues.md  github-adk-Pull requests.md  hackathon-expert.md
deployment/: deploy.py  test_deployment.py
docs/: README.md
docs/recording/: Recording-20250620_201538.webm  Recording-20250623_094911.webm  Recording-20250623_221253.webm
requirements_agent/: generate_requirements_with_vertex.py  yaml_to_pdf.py
requirements_agent/output/: generated_requirements.yaml  generated_requirements2.yaml
steering_agent/: .env  agent.py  eval.evalset.json  model.py  prompt.py
steering_agent/.adk/eval_history/: steering_agent_eval_1750256576.304975.evalset_result.json
steering_agent/sub_agents/doc_ingester/: __init__.py  agent.py
steering_agent/sub_agents/doors_connector/: __init__.py  agent.py
steering_agent/sub_agents/gap_analyzer/: README.md  __init__.py  agent.py
steering_agent/sub_agents/pdf_archivist/: __init__.py  agent.py
steering_agent/sub_agents/report_generator/: .env  __init__.py  agent.py
steering_agent/sub_agents/req_refiner/: README.md  __init__.py  agent.py
steering_agent/sub_agents/requirements_curator/: __init__.py  agent.py
steering_agent/tools/: ibm_doors_fetcher.py  vertexai_search_tool.py
tests/: test_agents.py
